--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,8 @@ target 'LivDivine' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'LivDivineTests' do
     inherit! :complete
     # Pods for testing
