--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -199,6 +199,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation(project(":react-native-google-signin"))
+    implementation(project(':react-native-splash-screen'))
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
