--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-thumbnail": "^1.1.3",
     "react-native-vector-icons": "^7.0.0",
