--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,6 +129,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    dexOptions {
+        javaMaxHeapSize "3g"
+    }
+
     defaultConfig {
         applicationId "com.livdivine"
         minSdkVersion rootProject.ext.minSdkVersion
