--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,6 +24,9 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2560m
+
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
 
