--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "16.13.1",
     "react-native": "0.63.1",
     "react-native-elements": "^2.0.4",
-    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.32.2",
     "react-native-image-picker": "^2.3.3",
@@ -46,6 +46,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0",
     "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
