--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,6 +202,7 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation(project(":react-native-google-signin"))
     implementation(project(':react-native-splash-screen'))
 
