--- a/package.json
+++ b/package.json
@@ -10,39 +10,42 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-hooks": "^3.1.5",
     "@monterosa/react-native-parallax-scroll": "^1.8.0",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.8.7",
-    "@react-navigation/stack": "^5.8.0",
+    "@react-navigation/drawer": "^5.8.3",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "axios": "^0.19.2",
-    "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
-    "native-base": "^2.13.13",
-    "react": "16.13.1",
+    "cloudinary-core": "^2.10.3",
+    "graphql": "^15.1.0",
+    "graphql-tag": "^2.10.3",
+    "native-base": "^2.13.12",
+    "react": "16.11.0",
     "react-native": "0.63.1",
-    "react-native-elements": "^2.0.4",
+    "react-native-elements": "^2.0.2",
     "react-native-fbsdk": "^2.0.0",
-    "react-native-gesture-handler": "^1.7.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.32.2",
     "react-native-image-picker": "^2.3.3",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-media-meta": "^0.0.10",
-    "react-native-reanimated": "^1.10.1",
-    "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.5",
+    "react-native-screens": "^2.8.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-thumbnail": "^1.1.3",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^4.4.5",
-    "react-navigation": "^4.4.0",
+    "react-native-video-player": "^0.10.1",
+    "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.5.0",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
