--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.8.3",
+    "@react-navigation/material-top-tabs": "^5.2.16",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "apollo-boost": "^0.4.9",
@@ -39,6 +40,7 @@
     "react-native-screens": "^2.8.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-tab-view": "^2.15.1",
     "react-native-thumbnail": "^1.1.3",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^4.4.5",
