--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-picker": "^2.3.3",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-media-meta": "^0.0.10",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
