--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'LivDivine' do
 
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
+  pod 'RNThumbnail', :path => '../node_modules/react-native-thumbnail'
+
   target 'LivDivineTests' do
     inherit! :complete
     # Pods for testing
