--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-media-meta": "^0.0.10",
     "react-native-modal": "^11.5.6",
+    "react-native-multi-slider": "^0.3.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
+    "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-tab-view": "^2.15.1",
