--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.63.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.2",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
