--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -205,6 +205,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation(project(":react-native-google-signin"))
     implementation(project(':react-native-splash-screen'))
+    implementation(project(':react-native-thumbnail'))
+    implementation(project(':WebRTCModule'))
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
