--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-elements": "^2.0.2",
     "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.32.2",
     "react-native-image-picker": "^2.3.3",
     "react-native-loading-spinner-overlay": "^1.1.0",
@@ -49,6 +50,7 @@
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^4.4.5",
     "react-native-video-player": "^0.10.1",
+    "react-native-webrtc": "^1.84.0",
     "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.5.0",
     "react-redux": "^7.2.0",
@@ -56,6 +58,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
+    "socket.io-client": "^2.3.1",
     "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
