--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,15 @@ import com.android.build.OutputFile
  * ]
  */
 
+buildscript {
+    repositories {
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
+    }
+}
+
 project.ext.react = [
     entryFile: "index.jsx",
     enableHermes: false,  // clean and rebuild if changing
@@ -238,3 +247,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
