--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'LivDivine' do
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
 
+  pod 'react-native-onesignal', :path => '../node_modules/react-native-onesignal'
+
   target 'LivDivineTests' do
     inherit! :complete
     # Pods for testing
