--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cloudinary-core": "^2.10.3",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
-    "native-base": "^2.13.12",
+    "native-base": "^2.15.2",
     "react": "16.11.0",
     "react-native": "0.63.1",
     "react-native-animatable": "^1.3.3",
@@ -39,6 +39,7 @@
     "react-native-media-meta": "^0.0.10",
     "react-native-modal": "^11.5.6",
     "react-native-multi-slider": "^0.3.6",
+    "react-native-onesignal": "^4.0.8",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
